Fix arrows on narrow screen (#3583)

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -528,15 +528,33 @@ details summary::-webkit-details-marker {
 
 .howtoexpand .expand-label > span > div {
   display: flex;
-  align-items:baseline;
+  flex-direction: column;
+  align-items: baseline;
 }
 
 .howtoexpand .expand-label > span > div > div {
   padding-right: 14px;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 0.5rem;
+}
+
+.howtoexpand .expand-label > span > div > div > div {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
 }
 
 .howtoexpand .expand-label i {
   font-size: x-small;
+  margin-right: 0.3rem;
+  min-width: 16px;
+  line-height: 1.4375em;
+  margin-top: 4px;
+}
+
+.howtoexpand .expand-label h4 {
+  margin-bottom: unset;
 }
 
 .howtoexpand .expand-content {
